--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,20 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "ipython>=9.6.0",
     "langchain>=0.3.27",
     "langchain-community>=0.3.30",
     "langchain-core>=0.3.76",
     "langchain-tavily>=0.2.11",
     "langchain-upstage>=0.7.3",
     "langgraph>=0.6.8",
+    "langgraph-cli[inmem]>=0.4.2",
     "numpy>=2.3.3",
     "openai>=1.109.1",
     "psycopg2-binary>=2.9.10",
+    "pyppeteer>=2.0.0",
     "python-dotenv>=1.1.1",
+    "qdrant-client>=1.15.1",
     "tavily-python>=0.7.12",
     "tqdm>=4.67.1",
 ]
