[Feat] qdrant 데이터 확인
- pg vector로 바꿔서 해보기
- 내가 파인튜닝해보기

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "pyppeteer>=2.0.0",
     "python-dotenv>=1.1.1",
     "qdrant-client>=1.15.1",
+    "sentence-transformers>=5.1.1",
+    "streamlit>=1.50.0",
     "tavily-python>=0.7.12",
     "tqdm>=4.67.1",
 ]
